svn merge -c 1309994 from trunk for HADOOP-6963.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/common/branches/branch-2@1309997 13f79535-47bb-0310-9956-ffa450edef68

--- a/hadoop-common-project/hadoop-common/pom.xml
+++ b/hadoop-common-project/hadoop-common/pom.xml
@@ -78,6 +78,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
       <scope>compile</scope>
