--- a/hadoop-hdfs-project/hadoop-hdfs-httpfs/pom.xml
+++ b/hadoop-hdfs-project/hadoop-hdfs-httpfs/pom.xml
@@ -14,7 +14,10 @@
 
 
 -->
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                      http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.hadoop</groupId>
@@ -474,7 +477,7 @@
                     <!-- Using Unix script to preserve file permissions -->
                     <echo file="${project.build.directory}/tomcat-untar.sh">
 
-                      which cygpath 2> /dev/null
+                      which cygpath 2&gt; /dev/null
                       if [ $? = 1 ]; then
                       BUILD_DIR="${project.build.directory}"
                       else
@@ -517,7 +520,7 @@
                     <!-- Using Unix script to preserve symlinks -->
                     <echo file="${project.build.directory}/dist-maketar.sh">
 
-                      which cygpath 2> /dev/null
+                      which cygpath 2&gt; /dev/null
                       if [ $? = 1 ]; then
                       BUILD_DIR="${project.build.directory}"
                       else
