--- a/hadoop-tools/pom.xml
+++ b/hadoop-tools/pom.xml
@@ -39,6 +39,7 @@
     <module>hadoop-datajoin</module>
     <module>hadoop-tools-dist</module>
     <module>hadoop-extras</module>
+    <module>hadoop-pipes</module>
   </modules>
 
   <build>
